--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,18 +3,17 @@
 {% block title %}Hello IndexController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<a href="{{ path('board_create') }}"></a>
+<div>
+    <h4>Boards:</h4>
+    {% if boards %}
+        {% for board in boards %}
+            <li><a href="{{ path('board_show', {'id': board.id}) }}">{{ board.title }}</a></li>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-    
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/IndexController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/index/index.html.twig</code></li>
-    </ul>
+        {% endfor %}
+        {% else %}
+        no groups
+    {% endif %}
 </div>
+<a href="{{ path('board_create') }}">Add a new board</a>
 {% endblock %}
