--- a/templates/board/show.html.twig
+++ b/templates/board/show.html.twig
@@ -5,9 +5,10 @@
 {% block body %}
     <h4>{{ board.title }}</h4>
     <p>{{ board.description }}</p>
+    <h4>topics:</h4>
     {% for topic in topics %}
         <li><a href="{{ path('topic_show', {'id': topic.id}) }}">{{ topic.title }}</a></li>
     {% endfor %}
 
-<a href="{{ path('topic_create', {'board': board.id}) }}">new topic</a>
+<a href="{{ path('topic_create', {'id': board.id}) }}">new topic</a>
 {% endblock %}
