--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TopicController!{% endblock %}
+{% block title %}{{ topic.title }}{% endblock %}
 
 {% block body %}
     <a href="{{ path('board_show', {'id': board.id}) }}">{{ board.title }}</a> > {{ topic.title }}
@@ -8,10 +8,15 @@
     <p>topic author: {{ topic.author.username }} {{ topic.createdAt|date }}</p>
     <h4>topic title: {{ topic.title }}</h4>
     <p>topic descr: {{ topic.body }}</p>
+    <a href="{{ path('topic_edit', {'id': topic.id}) }}">edit</a>
 </div>
     {% if posts %}
     {% for post in posts %}
-        <li>author: {{ post.author.username }} post: {{ post.body }}, {{ post.createdAt|date }}</li>
+        <div style="border: 1px solid black; margin: 10px">
+            <span>{{ post.author.username }} posts: {{ post.author.postCount }}, {{ post.createdAt|date }}, <a href="{{ path('post_edit', {'id': post.id}) }}">edit</a></span>
+            <p>{{ post.body }}</p>
+        </div>
+
     {% endfor %}
     {% endif %}
 
