permission and role revision

--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -2,4 +2,5 @@
     <a href="{{ path('home') }}">home</a>
     <a href="{{ path('login') }}">login</a>
     <a href="{{ path('logout') }}">logout</a>
+    <a href="{{ path('register') }}">register</a>
 </div>
