--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -9,11 +9,14 @@
     <h4>topic title: {{ topic.title }}</h4>
     <p>topic descr: {{ topic.body }}</p>
     <a href="{{ path('topic_edit', {'id': topic.id}) }}">edit</a>
+    <a href="{{ path('admin_manage', {'user': topic.author.id}) }}">manage</a>
 </div>
     {% if posts %}
     {% for post in posts %}
         <div style="border: 1px solid black; margin: 10px">
-            <span>{{ post.author.username }} posts: {{ post.author.postCount }}, {{ post.createdAt|date }}, <a href="{{ path('post_edit', {'id': post.id}) }}">edit</a></span>
+            <span>{{ post.author.username }} posts: {{ post.author.postCount }}, {{ post.createdAt|date }}, <a href="{{ path('post_edit', {'id': post.id}) }}">edit</a>
+            <a href="{{ path('admin_manage', {'user': post.author.id}) }}">manage</a>
+            </span>
             <p>{{ post.body }}</p>
         </div>
 
