--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -3,4 +3,5 @@
     <a href="{{ path('login') }}">login</a>
     <a href="{{ path('logout') }}">logout</a>
     <a href="{{ path('register') }}">register</a>
+    <a href="{{ path('admin_panel') }}">panel</a>
 </div>
