--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -1,23 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AdminController!{% endblock %}
+{% block title %}Admin panel{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
     {% for user in users %}
         <li><a href="{{ path('admin_manage', {'user': user.id}) }}">{{ user.username }}</a></li>
     {% endfor %}
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/var/www/html/src/Controller/AdminController.php</code></li>
-        <li>Your template at <code>/var/www/html/templates/admin/index.html.twig</code></li>
-    </ul>
-</div>
 {% endblock %}
