--- a/templates/topic/create.html.twig
+++ b/templates/topic/create.html.twig
@@ -1,8 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}new topic{% endblock %}
+{% block title %}New Topic{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
-    {{ form_end(form) }}
+    <div class="container mx-auto p-6 font-serif">
+        <h4 class="text-3xl font-extrabold text-gray-100 mb-6">Create a New Topic</h4>
+
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600 mb-6">
+            {{ form_start(form) }}
+                <div class="space-y-4">
+                    <div class="mb-6">
+                        {{ form_label(form.title, null, {'label_attr': {'class': 'text-lg text-gray-200 font-semibold'}}) }}
+                        {{ form_widget(form.title, {
+                            'attr': {
+                                'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
+                            }
+                        }) }}
+                    </div>
+
+                    <div class="mb-6">
+                        {{ form_label(form.body, null, {'label_attr': {'class': 'text-lg text-gray-200 font-semibold'}}) }}
+                        {{ form_widget(form.body, {
+                            'attr': {
+                                'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition'
+                            }
+                        }) }}
+                    </div>
+
+                    <div class="mt-6">
+                        <button type="submit" class="inline-block bg-indigo-600 text-white py-2 px-6 rounded-md hover:bg-indigo-700 transition duration-200 ease-in-out">
+                            Create Topic
+                        </button>
+                    </div>
+                </div>
+            {{ form_end(form) }}
+        </div>
+    </div>
 {% endblock %}
