--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,8 +1,57 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block body %}
-{{ form_start(editForm) }}
-    {{ form_end(editForm) }}
+    <div class="container mx-auto p-6 font-serif">
+        <h4 class="text-3xl font-extrabold text-gray-100 mb-6">Edit User</h4>
+
+        {{ form_start(editForm, {'attr': {'class': 'space-y-6'}}) }}
+        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600">
+
+            <!-- Username Field -->
+            <div class="mb-4">
+                {{ form_label(editForm.username, null, {'label_attr': {'class': 'text-lg font-medium text-gray-200'}}) }}
+                <div class="mt-2">
+                    {{ form_widget(editForm.username, {
+                        'attr': {
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                        }
+                    }) }}
+                </div>
+            </div>
+
+            <!-- Email Field -->
+            <div class="mb-4">
+                {{ form_label(editForm.email, null, {'label_attr': {'class': 'text-lg font-medium text-gray-200'}}) }}
+                <div class="mt-2">
+                    {{ form_widget(editForm.email, {
+                        'attr': {
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                        }
+                    }) }}
+                </div>
+            </div>
+
+            <!-- Password Field -->
+            <div class="mb-4">
+                {{ form_label(editForm.password, null, {'label_attr': {'class': 'text-lg font-medium text-gray-200'}}) }}
+                <div class="mt-2">
+                    {{ form_widget(editForm.password, {
+                        'attr': {
+                            'class': 'w-full bg-gray-700 text-white border border-gray-600 rounded-md py-3 px-4 focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:border-yellow-500 transition duration-200 ease-in-out'
+                        }
+                    }) }}
+                </div>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="mt-6">
+                <button type="submit" class="inline-block bg-yellow-600 text-white py-2 px-6 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
+                    Update User
+                </button>
+            </div>
+        </div>
+        {{ form_end(editForm) }}
+    </div>
 {% endblock %}
