--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -85,6 +85,6 @@
             {{ form_end(form) }}
         </div>
 
-        {{ include('_paginator.html.twig', {id: topic.id, path: path}) }}
+        {{ include('_paginator.html.twig', { id: topic.id, path: path, searchQuery: null }) }}
     </div>
 {% endblock %}
