--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -1,13 +1,13 @@
 {% for label, messages in app.flashes %}
     {% for message in messages %}
         {% if label is same as 'error' %}
-            <div class="bg-red-500 text-white p-4 rounded-md shadow-md mb-4">
+            <div class="bg-red-600 text-white px-3 py-1 shadow-md mb-4">
                 <p class="font-semibold">Error:</p>
                 <p>{{ message }}</p>
             </div>
         {% endif %}
         {% if label is same as 'success' %}
-            <div class="bg-green-500 text-white p-4 rounded-md shadow-md mb-4">
+            <div class="bg-green-600 text-white px-3 py-1  shadow-md mb-4">
                 <p class="font-semibold">Success:</p>
                 <p>{{ message }}</p>
             </div>
