--- a/templates/topic/show.html.twig
+++ b/templates/topic/show.html.twig
@@ -52,11 +52,14 @@
 
         {% if paginator.results %}
             <div class="mt-8 mb-4 space-y-4">
-                {% for post in paginator.results %}
-                    <div class="bg-gray-700 border-2 border-gray-600 shadow-md rounded-md p-4">
+                {% for key, post in paginator.results %}
+                    <div id="{{ post.id }}" class="bg-gray-700 border-2 border-gray-600 shadow-md rounded-md p-4">
                         <div class="flex justify-between items-center text-gray-400 text-sm">
                             <span>{{ post.author.username }} (Posts: {{ post.author.postCount }})</span>
-                            <span class="text-gray-500">{{ post.createdAt|date('Y-m-d') }}</span>
+                            <div>
+                                <span class="text-gray-500">{{ post.createdAt|date('Y-m-d') }}</span>
+                                <a class="ml-1" href="#{{ post.id }}">#{{ paginator.postIndex(key) }}</a>
+                            </div>
                         </div>
                         <p class="text-gray-300 mt-2">{{ post.body }}</p>
                         <div class="flex space-x-4 text-sm mt-4">
