--- a/templates/user/public_profile.html.twig
+++ b/templates/user/public_profile.html.twig
@@ -4,64 +4,117 @@
 
 {% block body %}
     <div class="container mx-auto p-6 font-serif">
-        <h4 class="text-3xl font-extrabold text-gray-100 mb-6">User Profile</h4>
-
         <!-- User Information -->
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600 mb-6">
-            <p class="text-lg text-gray-200 mb-2"><strong>Username:</strong> {{ user.username }}</p>
-            <p class="text-lg text-gray-200 mb-2"><strong>Email:</strong> {{ user.email }}</p>
+        <div class="bg-gray-800 p-6 shadow-lg border-4 border-gray-600 my-3">
+            <div>
+                <strong class="text-lg text-gray-200 inline-block self-center">{{ user.username }}</strong>
+                {% if app.user is same as user %}
+                    <a class="inline-block bg-blue-600 text-white mx-2 py-1 px-3 hover:bg-blue-500 transition duration-200 ease-in-out"
+                       href="{{ path('user_account') }}">Manage Account</a>
+                {% endif %}
+            </div>
+
+            <p class="text-lg text-gray-200">
+                <strong>Email:</strong>
+                {% if user.settings.showEmail %}
+                    <span>{{ user.email }}</span>
+                {% else %}
+                    <span class="text-gray-500">User email is hidden.</span>
+                {% endif %}
+            </p>
+
             <p class="text-lg text-gray-200"><strong>Joined:</strong> {{ user.createdAt|date('F j, Y') }}</p>
         </div>
 
-        <!-- Latest Posts Section -->
-        <h4 class="text-xl font-extrabold text-gray-100 mb-6">Latest Posts by {{ user.username }}:</h4>
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600 mb-6">
-            {% if provider.latestPosts %}
-                <ul class="space-y-4">
-                    {% for post in provider.latestPosts %}
-                        <li class="bg-gray-900 text-white p-4 rounded-lg shadow-md hover:bg-gray-700 transition duration-200 ease-in-out">
-                            <p class="text-lg">
-                                <strong>Topic:</strong>
-                                <a href="{{ path('topic_show', { id: post.topic.id }) }}" class="text-yellow-400 hover:underline">
-                                    {{ post.topic.title }}
-                                </a>
-                            </p>
-                            <p class="text-sm text-gray-400">Posted on {{ post.createdAt|date('F j, Y, g:i a') }}</p>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="{{ path('user_posts', { id: user.id }) }}"
-                   class="inline-block mt-4 bg-yellow-600 text-white py-2 px-6 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
-                    See All Posts
-                </a>
-            {% else %}
-                <p class="text-gray-400">User has not posted yet.</p>
-            {% endif %}
+        <div class="flex">
+            <!-- Latest Posts Section -->
+            <div class="bg-gray-800 p-5 shadow-lg border border-gray-600 border-t-4 border-l-4 border-b-4 w-2/4">
+                <h4 class="text-l text-gray-100 mb-4">Latest Posts by {{ user.username }}:</h4>
+                {% if user.settings.showPosts %}
+                    {% if provider.latestPosts %}
+                        <div class="space-y-1 w-100">
+                            {% for post in provider.latestPosts %}
+                                <div class="bg-gray-900 text-white px-3 py-2 shadow-md hover:bg-gray-700 transition duration-200 ease-in-out">
+                                    <div class="flex flex-col">
+
+                                        <div class="flex justify-content-between w-full">
+                                            <!-- Topic Title -->
+                                            <div class="truncate w-2/4  ">
+                                                <a href="{{ path('topic_show_paginated', { id: post.topic.id, page: helper.postPosition(post.id, post.topic.id) }) }}#{{ post.id }}"
+                                                   class="truncate text-yellow-400 hover:underline">
+                                                    in: {{ post.topic.title }}
+                                                </a>
+                                            </div>
+                                            <!-- Timestamp -->
+                                            <div class="w-2/4 text-right">
+                                           <span class="text-sm text-gray-400">Posted
+                                        on {{ post.createdAt|date('F j, Y, g:i a') }}</span>
+                                            </div>
+                                        </div>
+
+                                        <!-- Post Body -->
+                                        <p class="truncate text-gray-200">{{ post.body }}</p>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a href="{{ path('user_posts', { id: user.id }) }}"
+                           class="inline-block mt-4 bg-yellow-600 text-white py-2 px-4 hover:bg-yellow-500 transition duration-200 ease-in-out">
+                            See All Posts
+                        </a>
+                    {% else %}
+                        <p class="text-gray-400">User has not posted yet.</p>
+                    {% endif %}
+                {% else %}
+                    <p class="text-gray-400">User posts are hidden.</p>
+                {% endif %}
+            </div>
+
+            <!-- Latest Topics Section -->
+            <div class="bg-gray-800 p-5 shadow-lg border border-t-4 border-r-4 border-b-4 border-gray-600 w-2/4">
+                <h4 class="text-l text-gray-100 mb-4">Latest Topics by {{ user.username }}:</h4>
+                {% if user.settings.showTopics %}
+                    {% if provider.latestTopics %}
+                        <div class="space-y-1 w-100">
+                            {% for topic in provider.latestTopics %}
+                                <div class="bg-gray-900 text-white px-3 py-2 shadow-md hover:bg-gray-700 transition duration-200 ease-in-out">
+                                    <div class="flex flex-col">
+                                        <div class="flex justify-content-between w-full">
+                                            <!-- Board Title -->
+                                            <div class="truncate w-2/4  ">
+                                                <a href="{{ path('board_show', { id: topic.board.id }) }}"
+                                                   class="truncate text-gray-200 hover:underline">
+                                                    in: {{ topic.board.title }}
+                                                </a>
+                                            </div>
+                                            <!-- Timestamp -->
+                                            <div class="w-2/4 text-right">
+                                           <span class="text-sm text-gray-400">Created
+                                        on {{ topic.createdAt|date('F j, Y, g:i a') }}</span>
+                                            </div>
+                                        </div>
+
+                                        <!-- Topic Title -->
+                                        <a href="{{ path('topic_show', { id: topic.id }) }}"
+                                           class="truncate text-yellow-400 hover:underline">
+                                            {{ topic.title }}
+                                        </a>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                        </div>
+                        <a href="{{ path('user_topics', { id: user.id }) }}"
+                           class="inline-block mt-4 bg-yellow-600 text-white py-2 px-4 hover:bg-yellow-500 transition duration-200 ease-in-out">
+                            See All Topics
+                        </a>
+                    {% else %}
+                        <p class="text-gray-400">User has not created any topics yet.</p>
+                    {% endif %}
+                {% else %}
+                    <p class="text-gray-400">User topics are hidden.</p>
+                {% endif %}
+            </div>
         </div>
 
-        <!-- Latest Topics Section -->
-        <h4 class="text-xl font-extrabold text-gray-100 mb-6">Latest Topics by {{ user.username }}:</h4>
-        <div class="bg-gray-800 p-6 rounded-lg shadow-lg border-4 border-gray-600">
-            {% if provider.latestTopics %}
-                <ul class="space-y-4">
-                    {% for topic in provider.latestTopics %}
-                        <li class="bg-gray-900 text-white p-4 rounded-lg shadow-md hover:bg-gray-700 transition duration-200 ease-in-out">
-                            <p class="text-lg">
-                                <a href="{{ path('topic_show', { id: topic.id }) }}" class="text-yellow-400 hover:underline">
-                                    {{ topic.title }}
-                                </a>
-                            </p>
-                            <p class="text-sm text-gray-400">Created on {{ topic.createdAt|date('F j, Y, g:i a') }}</p>
-                        </li>
-                    {% endfor %}
-                </ul>
-                <a href="{{ path('user_topics', { id: user.id }) }}"
-                   class="inline-block mt-4 bg-yellow-600 text-white py-2 px-6 rounded-md hover:bg-yellow-500 transition duration-200 ease-in-out">
-                    See All Topics
-                </a>
-            {% else %}
-                <p class="text-gray-400">User has not created any topics yet.</p>
-            {% endif %}
-        </div>
     </div>
 {% endblock %}
