--- a/templates/user/topics.html.twig
+++ b/templates/user/topics.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container mx-auto p-6 font-serif bg-gray-800 text-white rounded-lg">
-        <h4 class="text-xl font-extrabold text-gray-100 mb-6">Topics created by {{ user.username }}</h4>
+        <h4 class="text-xl font-extrabold text-gray-100 mb-6">Topics created by <a class="text-yellow-400 hover:underline" href="{{ path('user_profile_public', { id: user.id }) }}">{{ user.username }}</a></h4>
 
         <!-- Topics List -->
         {% if paginator.results %}
