--- a/templates/nav.html.twig
+++ b/templates/nav.html.twig
@@ -7,7 +7,13 @@
         <a href="{{ path('admin_panel') }}" class="text-white hover:text-indigo-400 transition">Panel</a>
 
         {% if app.user %}
-            <a href="{{ path('user_profile_public', { id: app.user.id }) }}" class="text-white hover:text-indigo-400 transition">Profile</a>
+            <a href="{{ path('user_profile_public', { id: app.user.id }) }}" class="text-white hover:text-indigo-400 transition">{{ app.user.username }}</a>
+            <a href="{{ path('notifications') }}" class="text-white hover:text-indigo-400 transition">
+                Notifications
+                {% if notifications() %}
+                <span class="mx-1 inline-block w-2.5 h-2.5 bg-red-600 rounded-full"></span>
+                {% endif %}
+            </a>
         {% endif %}
     </nav>
 </div>
